--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-sequelize",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "sequelize code generator for models",
   "bin": {
     "generate-sequelize": "./bin/generate-sequelize"
@@ -17,7 +17,8 @@
   "files": [
     "lib",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "templates"
   ],
   "author": "",
   "license": "MIT",
