--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
     "prettier": "^3.0.0",
-    "sequelize-auto": "^0.8.8"
+    "sequelize-auto": "^0.8.8",
+    "tslib": "^2.6.3"
   },
   "peerDependencies": {
     "sequelize": ">3.30.0"
