--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-sequelize",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "sequelize code generator for models",
   "bin": {
     "generate-sequelize": "./bin/generate-sequelize"
@@ -34,8 +34,7 @@
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
     "prettier": "^3.0.0",
-    "sequelize-auto": "^0.8.8",
-    "tslib": "^2.6.3"
+    "sequelize-auto": "^0.8.8"
   },
   "peerDependencies": {
     "sequelize": ">3.30.0"
@@ -66,6 +65,7 @@
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "ts-node": "^10.9.2",
+    "tslib": "^2.6.3",
     "tsx": "^4.6.0",
     "typescript": "^5.4.5"
   },
