--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "generate-sequelize",
-  "version": "1.0.29",
+  "name": "@bitbean/generate-sequelize",
+  "version": "1.1.0",
   "description": "sequelize code generator for models",
   "bin": {
     "generate-sequelize": "./bin/generate-sequelize"
